--- a/fonts.css
+++ b/fonts.css
@@ -2,7 +2,7 @@
 	overflow-wrap: break-word;
 
 	font-family: Cantarell,
-	"Tahoma", "Microsoft Yahei",
+	"Ink Free", "Consolas"
 	"Helvetica Neue", -apple-system,
 	system-ui;
 }
