--- a/fonts.css
+++ b/fonts.css
@@ -19,9 +19,9 @@
 }
 
 h1, h2, .Menu, .Download, .Bottom-to-top {
-	font-family: en-font_Ink-Free, system-ui;
+	font-family: en-font_Ink-Free;
 }
 
 #section {
-	font-family: en-font_cantarell, system-ui;
+	font-family: en-font_cantarell;
 }
