--- a/colors.css
+++ b/colors.css
@@ -1,5 +1,5 @@
 body {background-color: #1f1f1f;}
-#Menu, #Article {background-color: #2f2f2f;}
+#Menu, #Article, #Footer {background-color: #2f2f2f;}
 .container {background-color: #3f3f3f;}
 .subcontainer {background-color: #4f4f4f;}
 
