--- a/files/styles/main.css
+++ b/files/styles/main.css
@@ -9,6 +9,7 @@ body #Menu, body #Article, body #Footer,
 .container, .subcontainer,
 .functionbuttons {
 	padding: .5%;
+	box-shadow: 4px 8px 2px black;
 	border: 2px solid white;
 }
 .container, .subcontainer {word-wrap: break-word;}
