--- a/files/styles/colors.css
+++ b/files/styles/colors.css
@@ -1,9 +1,9 @@
-body {background-color: #1f1f1f;}
+body {background-color: #ffffff;}
 #Menu, #Article, #Footer {background-color: #2f2f2f;}
 .container, .functionbuttons {background-color: #3f3f3f;}
 .subcontainer {background-color: #4f4f4f;}
 
-h1 {color: #d0d0d0;}
+h1 {color: #000000;}
 h2 {color: #c0c0c0;}
 p, table, ol {color: #b0b0b0;}
 a {color: #66c;}
