--- a/files/styles/colors.css
+++ b/files/styles/colors.css
@@ -1,13 +1,6 @@
-body {background-color: #ffffff;}
-#Menu, #Article, #Footer {background-color: #2f2f2f;}
-.container, .functionbuttons {background-color: #3f3f3f;}
-.subcontainer {background-color: #4f4f4f;}
+h1, h2, p, table, ol {color: #000000;}
 
-h1 {color: #000000;}
-h2 {color: #c0c0c0;}
-p, table, ol {color: #b0b0b0;}
-a {color: #66c;}
-a:hover {color: #99f;}
-#Menu #current {color: #6cc;}
-#Menu #current:hover {color: #9ff;}
-
+body, #Menu, #Article, #Footer,
+.container, .subcontainer,
+.functionbuttons {background-color: #ffffff;}
+a {color: #33cccc;}
