--- a/files/styles/colors.css
+++ b/files/styles/colors.css
@@ -3,4 +3,6 @@ h1, h2, p, table, ol {color: #000000;}
 body, #Menu, #Article, #Footer,
 .container, .subcontainer,
 .functionbuttons {background-color: #ffffff;}
-a {color: #33cccc;}
+
+#current {color: #009999;}
+a, .available {color: #00cccc;}
