--- a/assets/main.css
+++ b/assets/main.css
@@ -86,6 +86,9 @@ table {
 
 /* -------------------------------- */
 @media only screen and (max-width: 960px) {
-    .text-group { flex-direction: column; }
+    .text-group {
+        flex-direction: column;
+        gap: 0;
+    }
 }
 
