--- a/assets/main.css
+++ b/assets/main.css
@@ -59,8 +59,18 @@ table {
 }
 
 #current    { font-weight: bold; }
-#note       { font-size: 10px; margin-top: -12px; margin-bottom: -6px; }
-#footer     { padding-inline: 33vh; display: flex; flex-direction: row; }
+
+#note {
+    font-size: 10px;
+    margin-bottom: 4px;
+    line-height: 1.2em;
+}
+
+#footer {
+    display: flex;
+    flex-direction: row;
+    padding-inline: 33vh;
+}
 
 
 /* */
