--- a/assets/main.css
+++ b/assets/main.css
@@ -81,6 +81,9 @@ table {
 
 .text {padding-bottom: 24px;}
 
+@media only screen and (min-width: 2560px) {
+    font-size: 20px;
+}
 
 @media only screen and (max-width: 1280px) {
     #menu, #content, #footer {padding-inline: 16vh;}
