--- a/assets/main.css
+++ b/assets/main.css
@@ -82,7 +82,7 @@ table {
 .text {padding-bottom: 24px;}
 
 @media only screen and (min-width: 2560px) {
-    font-size: 20px;
+    body { font-size: 20px; }
 }
 
 @media only screen and (max-width: 1280px) {
