--- a/assets/main.css
+++ b/assets/main.css
@@ -32,7 +32,7 @@ u   { background-color: #ffffff; text-decoration: 1px underline; }
 
 a {
     color: #456699;
-    font-size: 22px;
+    font-size: 1.4em;
     text-decoration: none;
     transition: all .16s linear;
 }
@@ -59,7 +59,7 @@ table {
 #current { font-weight: bold; }
 
 #note {
-    font-size: 10px;
+    font-size: 0.6em;
     margin-bottom: 4px;
     line-height: 1.2em;
 }
