--- a/assets/main.css
+++ b/assets/main.css
@@ -32,7 +32,7 @@ u   { background-color: #ffffff; text-decoration: 1px underline; }
 
 a {
     color: #456699;
-    font-size: 1.4em;
+    font-size: 1.1em;
     text-decoration: none;
     transition: all .16s linear;
 }
@@ -81,8 +81,8 @@ table {
 
 .text { padding-bottom: 24px; }
 
-@media only screen and (min-width: 2560px) {
-    body { font-size: 20px; }
+@media only screen and (max-width: 2560px) {
+    body { font-size: 18px; }
 }
 
 @media only screen and (max-width: 1280px) {
