--- a/assets/size.css
+++ b/assets/size.css
@@ -1,4 +1,4 @@
-/* 4. Different Devices */
+/* Different Devices */
 /* > 2k laptop */
 @media only screen and (min-width: 1920px) and (max-width: 2560px){
     body { font-size: 18px }
